@@ -3,7 +3,7 @@
 if(!isset($_REQUEST['dir']))
 	$_REQUEST['dir'] = '/';
 if(!isset($_REQUEST['limit']))
-	$_REQUEST['limit'] = 50;
+	$_REQUEST['limit'] = 30;
 
 $GLOBALS['templates']['TEMPLATE_QUERY'] = LOCAL_ROOT . LOCAL_TEMPLATE . 'query.html';
 $GLOBALS['templates']['TEMPLATE_SEARCH'] = LOCAL_ROOT . LOCAL_TEMPLATE . 'search.html';
